# makefilehub

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  Cargo.toml  LICENSE  README.md  config.example.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mcp.rs  mod.rs
src/config/: interpolate.rs  loader.rs  mod.rs  model.rs
src/executor/: mod.rs  runner.rs
src/mcp/: mod.rs  server.rs
src/runner/: detect.rs  justfile.rs  makefile.rs  mod.rs  script.rs  traits.rs
tests/common/: mod.rs
